--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Saurabh Tapkir",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.3.1",
